--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.3.1
 autopep8==1.5.5
 Django==3.1.5
+django-filter==2.4.0
 django-forms-bootstrap==3.1.0
+djangorestframework==3.12.2
+Markdown==3.3.3
 Pillow==8.1.0
 psycopg2==2.8.6
 pycodestyle==2.6.0
